# SimpleRedGameEngine

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: main.cpp
src/SREngine/: main.cpp
src/SREngine/Engine/Camera/: Camera.cpp  Camera.h
src/SREngine/Engine/Component/: Component.h
src/SREngine/Engine/ECS/: EntityManager.cpp  EntityManager.h  Parameters.h
src/SREngine/Engine/GameObject/: GameObject.cpp  GameObject.h
src/SREngine/Engine/KeyListener/: KeyListener.cpp  KeyListener.h
src/SREngine/Engine/LevelEditorScene/: LevelEditorScene.cpp  LevelEditorScene.h
src/SREngine/Engine/LevelScene/: LevelScene.cpp  LevelScene.h
src/SREngine/Engine/MouseListener/: MouseListener.cpp  MouseListener.h
src/SREngine/Engine/Scene/: Scene.h
src/SREngine/Engine/Window/: Window.cpp  Window.h
src/SREngine/KeyListener/: KeyListener.h
src/SREngine/MouseListener/: MouseListener.h
src/SREngine/Renderer/Shader/: Shader.cpp  Shader.h
src/SREngine/Renderer/Texture/: Texture.cpp  Texture.h
src/SREngine/Utils/: Time.cpp  Time.h
src/SREngine/Window/: Window.cpp  Window.h
src/shaders/: defaultFragment.glsl  defaultVertex.glsl
